--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:  # 👈 This enables the "Run workflow" button
+
 
 jobs:
   build-and-deploy:
